# nse-data-ingestor

./: README.md  main.py  pyproject.toml  top-symbols.py
data/: instruments.csv  stock_data_RAMASTEEL.csv  stock_data_SBIN.csv
