[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nsepythonserver = "^2.93"
nselib = "^1.5"
nsepython = "^2.94"
xlsxwriter = "^3.2.0"
jugaad-data = "^0.26"
nsetools = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
